pre-image carousel experiment safety commit

--- a/index.html
+++ b/index.html
@@ -22,18 +22,22 @@
       <h3>image carousel</h3>
     </div>
     <div class="recent-work" alt="recent work">
-      <div class="1" id="recent-box">
-        event1
+      <div class="recent-box" id="event1">
+        <a href="#">HOWDY</a>
       </div>
-      <div class="2" id="recent-box">
-        event2
+      <div class="recent-box" id="event2">
+        <a href="#">HOWDY</a>
       </div>
-      <div class="3" id="recent-box">
-        event3
+      <div class="recent-box" id="event3">
+        <a href="#">HOWDY</a>
       </div>
     </div>
     <div class="about">
-      about blurb
+      <img src="images/christina-icon.jpg" alt="" id="icon">
+      <div class="about-content">
+        <h3>christina kuhlmann</h3>
+        <p>HELLO MY NAME BE CHRISBEANA DIS MY ABOUT SECTION HOWS IT GOING BRUV WE INNIT</p>
+      </div>
     </div>
     <div class="contact" alt="contact form">
       <h3>contact</h3>
@@ -53,7 +57,11 @@
       </form>
     </div>
   <footer>
-    footer stuff
+    <div class="social">
+      <img src="images/facebook.png" alt="facebook" id="social">
+      <img src="images/instagram.png" alt="instagram" id="social">
+      <img src="images/twitter.png" alt="twitter" id="social">
+    </div>
   </footer>
   </body>
 </html>
