add slider, actual photos

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css" integrity="sha256-HxaKz5E/eBbvhGMNwhWRPrAR9i/lG1JeT4mD6hCQ7s4=" crossorigin="anonymous" />
     <link href="https://fonts.googleapis.com/css?family=Aldrich" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+    <script type="text/javascript" src="js/javascript.js"></script>
     <title>Christina's Site</title>
   </head>
   <body>
@@ -18,8 +20,12 @@
         </ul>
       </nav>
     </header>
-    <div class="image-carousel" alt="images">
-      <h3>image carousel</h3>
+    <div class="container">
+      <div class="image-carousel" alt="images" id="slideshow">
+        <img src="https://c2.staticflickr.com/4/3898/14428847638_5f6de1a063_b.jpg" alt="" class="hello active" />
+        <img src="https://c2.staticflickr.com/4/3869/14606734125_01201e10c7_b.jpg" class="hello"/>
+        <img src="https://c2.staticflickr.com/4/3799/14303074514_e61074853f_b.jpg" alt="" class="hello"/>
+      </div>
     </div>
     <div class="recent-work" alt="recent work">
       <div class="recent-box" id="event1">
